# mp3splt

./: .gitignore  Makefile  Makefile.win32  README.md  Transifex.txt  cddb.c  compatible_options.gnumeric  compile_win32.sh  features_by_format.gnumeric  mp3.c  mp3splt-project.xmind  mp3splt.1  mp3splt.c  ogg.h  wrap.h
libmp3splt/: AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  NEWS  README  TODO  autogen.sh  config.h.in  configure.ac  include_variables.sh  libmp3splt.pc.in  make_dynamic_package.sh  make_source_package.sh  make_static_package.sh  update_version.sh
libmp3splt/debian/: changelog  control  copyright  generate_debian_files.sh  libmp3splt-doc.install  libmp3splt0-mp3.install  libmp3splt0-ogg.install  make_debian_package.sh  rules
libmp3splt/doc/: Doxyfile.in  Doxyfile_all.in  Doxyfile_api.in  Makefile.am
libmp3splt/doc/examples/: Makefile  Makefile.am  test_library.c
libmp3splt/freebsd/: make_freebsd_package.sh
libmp3splt/gentoo/: make_gentoo_ebuild.sh
libmp3splt/include/libmp3splt/: audacity.h  (+26 more)
libmp3splt/m4/: Makefile.am
libmp3splt/netbsd/: make_netbsd_package.sh
libmp3splt/openbsd/: make_openbsd_package.sh
libmp3splt/plugins/: Makefile.am  flac.c  flac.h  flac_frame_reader.c  flac_frame_reader.h  flac_metadata_utils.c  flac_metadata_utils.h  flac_silence.c  flac_silence.h  flac_tags.c  flac_utils.c  flac_utils.h  from_flac_library.c  from_flac_library.h  mp3.c  mp3.h  mp3_silence.c  mp3_silence.h  mp3_utils.c  mp3_utils.h  ogg.c  ogg.h  ogg_new_stream_handler.c  ogg_new_stream_handler.h  ogg_silence.c  ogg_silence.h  ogg_utils.c  ogg_utils.h  plugin_utils.h  silence_processors.c  silence_processors.h
libmp3splt/po/: Makefile.in.in  Makevars  POTFILES.in  cs.po  de.po  de_DE.po  es.po  fr.po  fr_FR.po  hr.po  libmp3splt.pot  libmp3splt0.pot
libmp3splt/src/: Doxyfile  Makefile.am  audacity.c  audacity.h  cddb.c  cddb.h  cddb_cue_common.c  cddb_cue_common.h  checks.c  checks.h  client.c  client.h  conversions.c  conversions.h  cue.c  cue.h  debug.c  debug.h  errors.c  errors.h  filename_regex.c  filename_regex.h  freedb.c  freedb.h  freedb_utils.c  freedb_utils.h  input_output.c  input_output.h  io.c  mp3splt.c  oformat_parser.c  oformat_parser.h  options.c  options.h  output_format.c  output_format.h  pair.c  pair.h  plugins.c  plugins.h  (+27 more)
libmp3splt/test/: Makefile.am  run-tests.sh  test_filename_regex.c  test_minimum_track_join.c  test_pair.c  test_socket_manager.c  test_splt_array.c  test_string_utils.c  tests.h
libmp3splt/windows/: make_windows_cross_compilation.sh
mp3splt-gtk/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  config.h.in  configure.ac  include_variables.sh  make_source_package.sh  mp3splt-gtk.desktop  mp3splt-gtk.desktop.in  update_version.sh
mp3splt-gtk/debian/: changelog  control  copyright  generate_debian_files.sh  make_debian_hurd_package.sh  make_debian_package.sh  make_nexenta_package.sh  rules  shlibs.local
mp3splt-gtk/doc/: Doxyfile  Doxyfile.in  Makefile.am
mp3splt-gtk/freebsd/: make_freebsd_package.sh
mp3splt-gtk/gentoo/: make_gentoo_ebuild.sh
mp3splt-gtk/help/: Makefile.am
mp3splt-gtk/m4/: mp3splt.m4
mp3splt-gtk/netbsd/: make_netbsd_package.sh
mp3splt-gtk/po/: LINGUAS  Makevars  POTFILES.in  cs.po  de.po  de_DE.po  es.po  es_CL.po  fr.po  fr_FR.po  mp3splt-gtk.pot  ro.po  ru_RU.po
mp3splt-gtk/slackware/: slack-desc
mp3splt-gtk/src/: Makefile.am  all_includes.h  audacious_control.c  cddb_cue.c  cddb_cue.h  combo_helper.c  combo_helper.h  dialog_helper.h  douglas_peucker.c  douglas_peucker.h  drag_and_drop.c  drag_and_drop.h  drawing_helper.c  drawing_helper.h  export.c  export.h  external_includes.h  freedb_tab.c  freedb_tab.h  freedb_window.c  freedb_window.h  gstreamer_control.c  gstreamer_control.h  import.c  import.h  libmp3splt_manager.c  libmp3splt_manager.h  main_win.c  main_win.h  main_window.c  main_window.h  messages.c  messages.h  messages_window.c  messages_window.h  mp3splt-gtk.c  mp3splt-gtk.h  multiple_files.c  multiple_files.h  multiple_files_window.c  (+47 more)
mp3splt-gtk/test/: Makefile.am  run-tests.sh  test_douglas_peucker.c
mp3splt-gtk/windows/: make_windows_cross_compilation.sh  make_windows_cross_installer.sh  make_windows_installer.sh  make_windows_zip.sh
mp3splt-project/libmp3splt/: AUTHORS  ChangeLog  INSTALL  Makefile.am  README  TODO  autogen.sh  config.h.in  configure.ac  include_variables.sh  install_in_tmp.sh  make_dynamic_package.sh  make_source_package.sh  make_static_package.sh  update_version.sh
mp3splt-project/mp3splt-gtk/: AUTHORS  ChangeLog  INSTALL  README  TODO  autogen.sh  config.h.in  configure.ac  include_variables.sh  make_dynamic_package.sh  make_source_package.sh  make_static_package.sh  update_version.sh
mp3splt-project/newmp3splt/: AUTHORS  INSTALL  README  autogen.sh  configure.ac  include_variables.sh  make_dynamic_package.sh  make_source_package.sh  make_static_package.sh  update_version.sh
newmp3splt/: AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac  include_variables.sh  make_source_package.sh  update_version.sh
newmp3splt/arch/: make_arch_package.sh
newmp3splt/debian/: changelog  control  copyright  generate_debian_files.sh  make_debian_package.sh  rules  shlibs.local
newmp3splt/doc/: Makefile.am  generate_manual.sh  man.html  manual.html  mp3splt.1
newmp3splt/gentoo/: make_gentoo_ebuild.sh
newmp3splt/m4/: mp3splt.m4
newmp3splt/po/: LINGUAS  Makefile.in.in  Makevars  POTFILES.in  cs.po  de.po  de_DE.po  es.po  fr.po  fr_FR.po  mp3splt.pot
newmp3splt/rpm/: make_rpm_package.sh
newmp3splt/slackware/: slack-desc
newmp3splt/src/: Makefile.am  common.h  data_manager.c  data_manager.h  freedb.c  freedb.h  mp3splt.c  options_checker.c  options_checker.h  options_manager.c  options_manager.h  options_parsers.c  options_parsers.h  print_utils.c  print_utils.h  utils.c  utils.h  windows_utils.c  windows_utils.h
newmp3splt/windows/: make_windows_cross_compilation.sh  make_windows_cross_installer.sh  make_windows_installer.sh  make_windows_zip.sh  win32_installer.nsi
(+1775 files in other folders)
